--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,11 +1,99 @@
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+html {
+    scroll-behavior: smooth;
+  }
+
+body {
     height: 100vh;
 }
 
 .container {
-    background-color:#672f0a;
-    width: 100%;
+    background-color: #672f0a;
+    width: 100%; 
     height: 100vh;
 }
+
+.container header {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 80px;
+    background-color: #a97b4c;
+}
+
+.container header nav h1 {
+    padding: 25px;
+    padding-left: 480px;
+    margin-right: 200px;
+    color: whitesmoke;
+}
+
+.container header nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    height: 100%; 
+}
+
+.container header nav ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+}
+
+.container header nav ul li {
+    position: relative; 
+    height: 100%; 
+}
+
+.container header nav ul li a {
+    text-decoration: none;
+    display: block;
+    color: whitesmoke;
+    padding: 30px 20px 0;
+    height: 100%; 
+}
+
+.active a {
+    background-color: #672f0a;
+}
+
+header nav ul li a:hover {
+    color: #903b0d;
+    border-bottom: 5px solid #944300;
+}
+
+main .main-box {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: space-around;
+    height: 100vh; 
+}
+
+.container .main-box img {
+    width: auto; 
+    height: 100%;
+}
+
+.container .main-box .text-box {
+    color: whitesmoke;
+    padding: 200px;
+    font-size: 20px;
+}
+
+.container .main-box .text-box h1 {
+    padding-bottom: 50px;
+}
+
